--- a/.github/workflows/build-and-upload-ppa.yml
+++ b/.github/workflows/build-and-upload-ppa.yml
@@ -132,10 +132,12 @@ jobs:
       - name: Setup GPG
         run: |
           echo "${{ secrets.PPA_GPG_PRIVATE_KEY }}" | gpg --batch --import --pinentry-mode loopback --passphrase "${{ secrets.PPA_GPG_PASSPHRASE }}"
-          GPG_KEY_ID=$(gpg --list-secret-keys --keyid-format LONG | grep sec | head -1 | awk '{print $2}' | cut -d'/' -f2)
-          GPG_FINGERPRINT=$(gpg --list-secret-keys --keyid-format LONG | grep sec | head -1 | awk '{print $3}')
-          echo "GPG_KEY_ID=$GPG_KEY_ID" >> $GITHUB_ENV
+          
+          # Get the full 40-character fingerprint
+          GPG_FINGERPRINT=$(gpg --list-secret-keys --with-fingerprint --with-colons | grep '^fpr' | head -1 | cut -d: -f10)
+          
           echo "GPG_FINGERPRINT=$GPG_FINGERPRINT" >> $GITHUB_ENV
+          
           export GNUPGHOME=~/.gnupg
           chmod 700 ~/.gnupg
 
@@ -211,11 +213,15 @@ jobs:
           
           debuild -us -uc -S -sa
           
+          # Sign the dsc and changes files in the parent directory
           cd ..
           
-          # Now manually sign the dsc and changes files
-          echo "${{ secrets.PPA_GPG_PASSPHRASE }}" | gpg --batch --yes --pinentry-mode loopback --passphrase-fd 0 --default-key "$GPG_FINGERPRINT" --detach-sign --armor "sea-lantern-ppa-updater_${PACKAGE_VERSION}.dsc"
-          echo "${{ secrets.PPA_GPG_PASSPHRASE }}" | gpg --batch --yes --pinentry-mode loopback --passphrase-fd 0 --default-key "$GPG_FINGERPRINT" --clearsign --armor "sea-lantern-ppa-updater_${PACKAGE_VERSION}_source.changes"
+          # Use absolute paths to sign
+          DSC_FILE="./ppa-source/sea-lantern-ppa-updater_${PACKAGE_VERSION}.dsc"
+          CHANGES_FILE="./ppa-source/sea-lantern-ppa-updater_${PACKAGE_VERSION}_source.changes"
+          
+          echo "${{ secrets.PPA_GPG_PASSPHRASE }}" | gpg --batch --yes --pinentry-mode loopback --passphrase-fd 0 --default-key "$GPG_FINGERPRINT" --detach-sign --armor "$DSC_FILE"
+          echo "${{ secrets.PPA_GPG_PASSPHRASE }}" | gpg --batch --yes --pinentry-mode loopback --passphrase-fd 0 --default-key "$GPG_FINGERPRINT" --clearsign --armor "$CHANGES_FILE"
 
       - name: Upload to PPA
         run: |
@@ -224,7 +230,7 @@ jobs:
           PACKAGE_VERSION="${VERSION}~${DISTRO}1"
           
           echo "Uploading ${DISTRO} package to PPA..."
-          dput ppa:brianeee7878/sealantern sea-lantern-ppa-updater_${PACKAGE_VERSION}_source.changes || true
+          dput ppa:brianeee7878/sealantern ppa-source/sea-lantern-ppa-updater_${PACKAGE_VERSION}_source.changes || true
           
           echo "✅ Attempted to upload ${DISTRO} package to PPA"
 
