--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -63,10 +63,7 @@ image = { version = "0.25", default-features = false, features = [
 notify = { version = "6.0", optional = true }
 
 [target.'cfg(windows)'.dependencies]
-windows = { version = "0.58", features = [
-    "Win32_System_Performance",
-    "Win32_Foundation",
-] }
+windows = { version = "0.58", features = ["Win32_System_Performance", "Win32_Foundation"] }
 winreg = "0.52"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
