--- a/.github/workflows/build-and-upload-ppa.yml
+++ b/.github/workflows/build-and-upload-ppa.yml
@@ -81,6 +81,7 @@ jobs:
           
           cat > "${PACKAGE_DIR}/DEBIAN/postinst" << 'POSTINST'
           #!/bin/bash
+          set -e
           
           PACKAGE_VERSION=$(dpkg -s sea-lantern-ppa-updater 2>/dev/null | grep Version | awk '{print $2}' | sed 's/~.*$//')
           if [ -z "$PACKAGE_VERSION" ]; then
@@ -92,21 +93,29 @@ jobs:
           echo "正在安装 Sea Lantern ${PACKAGE_VERSION}..."
           
           if [ -f "$EMBEDDED_DEB" ]; then
-              dpkg -i "$EMBEDDED_DEB" || true
-              
-              if ! dpkg -s sea-lantern >/dev/null 2>&1; then
-                  echo "正在安装依赖..."
-                  apt-get install -f -y
-              fi
-              
-              if dpkg -s sea-lantern >/dev/null 2>&1; then
-                  echo "✅ Sea Lantern 安装完成！"
+              # 先尝试直接安装
+              if dpkg -i "$EMBEDDED_DEB" 2>/dev/null; then
+                  echo "✅ Sea Lantern 安装成功！"
                   echo "运行命令: sea-lantern"
                   rm -f "$EMBEDDED_DEB"
-              else
-                  echo "❌ 安装失败，请手动检查"
-                  exit 1
+                  exit 0
               fi
+              
+              # 如果失败，可能是依赖问题，安装依赖
+              echo "正在解决依赖问题..."
+              if apt-get install -f -y; then
+                  # 再次尝试安装
+                  if dpkg -i "$EMBEDDED_DEB" 2>/dev/null; then
+                      echo "✅ Sea Lantern 安装成功！"
+                      echo "运行命令: sea-lantern"
+                      rm -f "$EMBEDDED_DEB"
+                      exit 0
+                  fi
+              fi
+              
+              echo "❌ 安装失败，请手动检查"
+              echo "可以尝试手动运行: sudo dpkg -i $EMBEDDED_DEB"
+              exit 1
           else
               echo "❌ 找不到嵌入的包文件: $EMBEDDED_DEB"
               exit 1
@@ -119,7 +128,7 @@ jobs:
           #!/bin/bash
           if [ "$1" = "remove" ] || [ "$1" = "purge" ]; then
               echo "正在卸载 Sea Lantern..."
-              dpkg -l | grep -q sea-lantern && dpkg -r sea-lantern || true
+              dpkg -l | grep -q sealantern && dpkg -r sealantern || true
           fi
           PRERM
           
