--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,3 +70,210 @@ jobs:
           releaseDraft: true
           prerelease: false
           args: ${{ matrix.args }}
+
+  # Arch Linux 打包任务 - 根据您的 PKGBUILD 优化
+  build-arch-package:
+    needs: publish-tauri
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
+
+    steps:
+      - name: 检出代码
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: 获取版本号
+        id: get_version
+        run: |
+          VERSION=$(node -p "require('./package.json').version")
+          echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
+          echo "✅ 版本号: $VERSION"
+
+      - name: 下载 Ubuntu 构建产物
+        uses: actions/download-artifact@v4
+        with:
+          name: ubuntu-build
+          path: ./downloads
+        continue-on-error: true
+
+      - name: 查找 deb 包
+        id: find_deb
+        run: |
+          if [ -d "./downloads" ]; then
+            DEB_FILE=$(find ./downloads -name "*.deb" -type f | head -1)
+          fi
+          if [ -z "$DEB_FILE" ]; then
+            DEB_FILE=$(find . -name "*.deb" -type f | head -1)
+          fi
+          if [ -z "$DEB_FILE" ]; then
+            echo "❌ 未找到 deb 包文件"
+            exit 1
+          fi
+          echo "✅ 找到 deb 包: $DEB_FILE"
+          cp "$DEB_FILE" ./sealantern.deb
+          echo "DEB_FILE=$DEB_FILE" >> $GITHUB_OUTPUT
+
+      - name: 设置 Arch Linux 容器并安装完整依赖
+        run: |
+          docker run --name arch-builder -d \
+            -v $PWD:/workspace \
+            archlinux:latest \
+            sleep infinity
+
+          # 根据您的 PKGBUILD 安装所有 depends 和 makedepends
+          docker exec arch-builder bash -c "
+            pacman -Syu --noconfirm && \
+            pacman -S --noconfirm \
+              # 基础开发工具 (makedepends)
+              base-devel \
+              binutils \
+              file \
+              findutils \
+              grep \
+              sed \
+              gawk \
+              dpkg \
+              \
+              # GTK 相关基础依赖
+              cairo \
+              gdk-pixbuf2 \
+              glib2 \
+              gtk3 \
+              pango \
+              atk \
+              libgl \
+              \
+              # WebKit 相关依赖
+              webkit2gtk \
+              libsoup \
+              \
+              # 系统图标主题
+              hicolor-icon-theme \
+              adwaita-icon-theme \
+              \
+              # 桌面文件相关
+              desktop-file-utils \
+              shared-mime-info \
+              \
+              # 安全相关
+              libxss \
+              nss \
+              nspr \
+              \
+              # 系统托盘支持
+              libayatana-appindicator \
+              libappindicator-gtk3 \
+              \
+              # 网络相关
+              curl \
+              wget \
+              openssl \
+              ca-certificates \
+              gnutls \
+              \
+              # 图形相关
+              libx11 \
+              libxcb \
+              libxcomposite \
+              libxcursor \
+              libxdamage \
+              libxext \
+              libxfixes \
+              libxi \
+              libxrandr \
+              libxrender \
+              libxtst \
+              \
+              # 字体支持
+              fontconfig \
+              freetype2 \
+              \
+              # 音频支持
+              alsa-lib \
+              libpulse \
+              \
+              # 数据库支持
+              sqlite3 \
+              \
+              # 压缩支持
+              zlib \
+              bzip2 \
+              xz \
+              \
+              # 其他常用库
+              expat \
+              libffi \
+              pcre \
+              pcre2 \
+              libgcrypt \
+              libgpg-error \
+              libdatrie \
+              libthai \
+              libice \
+              libsm \
+              util-linux \
+              util-linux-libs
+          "
+          echo "✅ Arch Linux 容器依赖安装完成"
+
+      - name: 使用您的 PKGBUILD 构建 Arch 包
+        run: |
+          VERSION="${{ steps.get_version.outputs.VERSION }}"
+
+          # 将您的 PKGBUILD 和 sealantern.install 文件复制到容器
+          docker cp sealantern.deb arch-builder:/workspace/
+          docker cp PKGBUILD arch-builder:/workspace/
+          # 如果存在 sealantern.install 文件，也复制过去
+          [ -f "sealantern.install" ] && docker cp sealantern.install arch-builder:/workspace/
+
+          # 在容器中执行打包，使用您的原始 PKGBUILD
+          docker exec arch-builder bash -c "
+            cd /workspace && \
+            chown -R builder:builder . && \
+
+            # 更新 PKGBUILD 中的版本号（确保与当前版本一致）
+            sed -i 's/^pkgver=.*/pkgver=$VERSION/' PKGBUILD && \
+            sed -i 's/^pkgrel=.*/pkgrel=1/' PKGBUILD && \
+
+            # 以 builder 用户运行 makepkg 生成最终包
+            sudo -u builder makepkg -f --noconfirm
+          "
+
+      - name: 从容器中获取构建产物
+        run: |
+          # 复制生成的包文件（可能是 .pkg.tar.zst 或 .pkg.tar.xz）
+          docker cp arch-builder:/workspace/*.pkg.tar.* . || true
+
+          if ls *.pkg.tar.* 1> /dev/null 2>&1; then
+            echo "✅ Arch 包生成成功"
+            ls -la *.pkg.tar.*
+          else
+            echo "❌ Arch 包生成失败"
+            exit 1
+          fi
+
+      - name: 停止并删除容器
+        if: always()
+        run: |
+          docker stop arch-builder || true
+          docker rm arch-builder || true
+
+      - name: 上传 Arch 包到 Release
+        uses: softprops/action-gh-release@v2
+        if: success()
+        with:
+          tag_name: sea-lantern-v${{ steps.get_version.outputs.VERSION }}
+          files: |
+            *.pkg.tar.*
+          draft: true
+          prerelease: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: 上传 Arch 包作为构建产物
+        uses: actions/upload-artifact@v4
+        with:
+          name: arch-package
+          path: |
+            *.pkg.tar.*
