--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,7 +53,6 @@ jobs:
           workspaces: "./src-tauri -> target"
 
       - name: 安装前端依赖 (npm)
-        # 默认用npm,最稳妥
         run: npm install
 
       - name: 构建并发布
@@ -70,6 +69,17 @@ jobs:
           releaseDraft: true
           prerelease: false
           args: ${{ matrix.args }}
+
+      # 新增：上传 Ubuntu 构建产物
+      - name: 上传 Ubuntu 构建产物
+        if: matrix.platform == 'ubuntu-24.04'
+        uses: actions/upload-artifact@v4
+        with:
+          name: ubuntu-build
+          path: |
+            src-tauri/target/release/bundle/deb/*.deb
+            src-tauri/target/release/bundle/appimage/*.AppImage
+          if-no-files-found: warn
 
   # Arch Linux 打包任务 - 根据您的 PKGBUILD 优化
   build-arch-package:
